samples/_failures_safe/1761515462_9a9a37_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a1d64ac.c: In function ‘main’:
./samples/SAFE/__tmp_7a1d64ac.c:142:9: error: expected expression at end of input
  142 |         end_node <
      |         ^~~~~~~~
./samples/SAFE/__tmp_7a1d64ac.c:142:9: error: expected declaration or statement at end of input
